Deleted task numbers. Change style some elements. Added widget completed tasks

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </header>
 
     <main class="main">
+      <section class="complete-section">
+        <input type="checkbox" id="visible-complete-task" hidden>
+        <label for="visible-complete-task" class="fake-complete-task-checkbox">Complete tasks</label>
+        <ul class="complete-section_list"></ul>
+      </section>
+
       <section class="todo-app">
         <div class="todo-app__add">
           <button class="btn-create-task btn">CREATE TASK</button>
